# aster

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  build.sh  index.html  manage.py  mkdocs.yml  pyproject.toml  render.yaml  sitemap.xml
.github/workflows/: docs.yml  e2e.yml  keep-alive.yml  security.yml  test.yml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_genre_user_favorite_genres.py  0003_relocate_genre_to_movies.py
architecture/apis/: index.html
architecture/database/: index.html
architecture/system/: index.html
architecture/tech-stack/: index.html
assets/a11y/: register.html  summary.txt
community/: mock.py  models.py  services.py  urls.py  views.py
community/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: tests.py  views.py
docs/: app-concept.qmd  index.md
docs/.archive/: database-design.md
docs/architecture/: apis.md  database.md  system.md  tech-stack.md
docs/assets/a11y/: login.html  movie-detail.html  movies-list.html
docs/assets/perf/: README.txt
docs/assets/security/: bandit-report.json  pip-audit-report.json
docs/assets/tests/: e2e-summary.txt  pytest-summary.txt
docs/implementation/: deployment.md  modules.md
docs/maintenance/: admin-guide.md  changelog.md  user-guide.md
docs/requirements/: functional.md  non-functional.md
docs/testing/: reports.md  strategy.md
docs/ux/: sitemap.md  user-journeys.md
feedback/: admin.py  forms.py  github.py  models.py  urls.py  views.py
feedback/migrations/: 0001_initial.py
implementation/deployment/: index.html
implementation/modules/: index.html
maintenance/admin-guide/: index.html
maintenance/changelog/: index.html
maintenance/user-guide/: index.html
movies/: admin.py  models.py  services.py  tests.py  tmdb.py  urls.py  views.py
movies/management/commands/: backfill_credits.py  normalize_genres.py  sync_tmdb_genres.py  sync_tmdb_popular.py
movies/migrations/: 0001_initial.py  0002_rename_sci_fi_genre.py  0003_seed_all_tmdb_genres.py  0004_rating_usermoviestatus.py  0005_comment.py  0006_half_star_ratings.py  0007_person_and_credits.py  0008_rating_movies_rati_user_id_4e1bc6_idx.py  0009_rating_movies_rati_user_id_d94fb1_idx_and_more.py
requirements/functional/: index.html
requirements/non-functional/: index.html
search/: search_index.json
static/css/: app.css
static/js/: genre_toggle.js
static/pwa/: manifest.webmanifest
stylesheets/: extra.css
templates/: base.html
templates/accounts/: activation_result.html  activation_sent.html  edit_display_name.html  edit_favorite_genres.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html  resend_activation.html  settings.html
templates/accounts/emails/: activation_email.html  activation_email.txt  password_reset_email.html  password_reset_email.txt  password_reset_subject.txt
templates/community/: _feed_groups.html  _person_card.html  _tabs.html  feed.html  lists.html  people.html  profile.html
templates/core/: dashboard.html  home.html  landing.html
templates/feedback/: _widget.html
templates/movies/: _actions.html  _comments_section.html  _rating_modal.html  _user_rating_cell.html  detail.html  list.html
templates/partials/: form_fields.html  genre_field.html
templates/pwa/: service-worker.js
testing/reports/: index.html
testing/strategy/: index.html
tests/e2e/: conftest.py  test_browse_rate_comment.py  test_register_login.py  test_watchlist.py
tests/feedback/: test_github.py  test_views.py
tests/perf/: locustfile.py
ux/sitemap/: index.html
ux/user-journeys/: index.html
