[project]
name = "movie-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Django>=5.2,<5.3",
  "python-dotenv>=1.2,<1.3",
  "gunicorn>=23.0",
  "psycopg[binary]>=3.2",
  "dj-database-url>=2.3",
  "whitenoise>=6.8",
  "django-anymail[brevo]>=14.0",
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
]

[tool.uv]
package = false
